# assert_checks

./: .clang-format  CMakeLists.txt  CPPLINT.cfg  Contributing.md  README.md  assert_checks.cmake  test_build_fail.c  test_build_ok.c  test_run_fail.c  test_run_ok.c
cmake/: assert_checks.cmake
src/: some_method.c  some_method.h  test_build_fail.c  test_build_ok.c  test_run_fail.c  test_run_ok.c
